fixes #26: dark mode

--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+:root {
+	--th: #ddd;
+	--tr-odd: #f7f7f7;
+	--tr-even: #eee;
+	--tr-odd-hilited: #BDDFEB;
+	--tr-even-hilited: lightblue;
+	--tr-hover: #d7d7d7;
+}
+
 * {
 	box-sizing: border-box;
 }
@@ -11,6 +20,9 @@ body, input, select, option, textarea, button {
 }
 body {
 	margin: 10px;
+}
+a {
+	color: blue;
 }
 
 :-ms-input-placeholder {
@@ -28,8 +40,11 @@ input:not([type="checkbox"]):not([type="radio"]):not([type="number"]) {
 	max-width: 100%;
 }
 input:not([type="checkbox"]):not([type="radio"]),
-select {
+select,
+textarea,
+button {
 	padding: 4px;
+	border: solid 1px #aaa;
 }
 input[type="number"] {
 	width: 2em;
@@ -43,9 +58,6 @@ input[type="number"]::-webkit-outer-spin-button {
 	margin: 0;
 }
 
-button {
-	padding: 4px;
-}
 button.submit {
 	font-weight: bold;
 	color: green;
@@ -106,6 +118,7 @@ th[data-sort]:not([data-sorting]):after {
 tr.rating-1 td.rating,
 .rating.rating-1 {
 	background: red !important;
+	color: black !important;
 }
 tr.rating-1 {
 	border-right: solid 5px red !important;
@@ -113,6 +126,7 @@ tr.rating-1 {
 tr.rating-2 td.rating,
 .rating.rating-2 {
 	background: orange !important;
+	color: black !important;
 }
 tr.rating-2 {
 	border-right: solid 5px orange !important;
@@ -120,6 +134,7 @@ tr.rating-2 {
 tr.rating-3 td.rating,
 .rating.rating-3 {
 	background: yellow !important;
+	color: black !important;
 }
 tr.rating-3 {
 	border-right: solid 5px yellow !important;
@@ -127,6 +142,7 @@ tr.rating-3 {
 tr.rating-4 td.rating,
 .rating.rating-4 {
 	background: lime !important;
+	color: black !important;
 }
 tr.rating-4 {
 	border-right: solid 5px lime !important;
@@ -163,7 +179,7 @@ tr.search-hide {
 	display: none;
 }
 th {
-	background-color: #ddd;
+	background-color: var(--th);
 }
 th:not([align]) {
 	text-align: left;
@@ -173,16 +189,16 @@ th, td {
 	border: solid 1px #ccc;
 }
 tbody tr:nth-child(odd) td {
-	background-color: #f7f7f7;
+	background-color: var(--tr-odd);
 }
 tbody tr:nth-child(odd).hilited td {
-	background-color: #BDDFEB;
+	background-color: var(--tr-odd-hilited);
 }
 tbody tr:nth-child(even) td {
-	background-color: #eee;
+	background-color: var(--tr-even);
 }
 tbody tr:nth-child(even).hilited td {
-	background-color: lightblue;
+	background-color: var(--tr-even-hilited);
 }
 .summary:not(:empty) + .notes:not(:empty) {
 	padding-top: .25em;
@@ -296,7 +312,7 @@ input.pages {
 	padding: 5px 8px;
 	color: inherit;
 	text-decoration: inherit;
-	background-color: #f7f7f7;
+	background-color: var(--tr-odd);
 	color: #000;
 	max-width: calc(100vw - 20px);
 }
@@ -304,14 +320,13 @@ input.pages {
 	white-space: nowrap;
 	overflow: hidden;
 	overflow-x: auto;
-	x-text-overflow: ellipsis;
 }
 #results li:nth-child(even) a {
-	background-color: #e7e7e7;
+	background-color: var(--tr-even);
 }
 #results li:nth-child(1n) a:hover,
 #results li:nth-child(1n) a:focus {
-	background-color: #d7d7d7;
+	background-color: var(--tr-hover);
 	outline: solid 1px black;
 }
 #results a .author-title {
@@ -343,5 +358,37 @@ input.pages {
 	}
 	#results a {
 		max-width: 30em;
+	}
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--th: #333;
+		--tr-odd: #222;
+		--tr-even: #111;
+		--tr-odd-hilited: blue;
+		--tr-even-hilited: darkblue;
+		--tr-hover: #333;
+	}
+	body, input, select, option, textarea, button {
+		background-color: #000;
+		color: #ccc;
+	}
+	button {
+		background-color: #111;
+	}
+	a {
+		color: lightblue;
+	}
+	.p.search {
+		background-color: #111;
+	}
+	#results:before {
+		background-color: #444;
+	}
+	#results a,
+	#results a .subtitle,
+	#results a .classification {
+		color: #ccc;
 	}
 }
